# call-for-papers

./: .dockerignore  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  DATABASE_SETUP.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  auth-notes.txt  compose.prod.yaml  compose.yaml  config.default.toml  config.example.toml  justfile
.beads/: issues.jsonl
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  docker.yml  pr-automation.yml  release.yml
debian/: postinst  postrm  prerm
docs/: api.md  architecture.md  organizer-guide.md  speaker-guide.md
frontend/: Cargo.toml  README.md  Trunk.toml  index.html
frontend/public/: styles.css
frontend/src/: app.rs  main.rs  types.rs
frontend/src/components/: label_badge.rs  mod.rs  organizer_route.rs  protected_route.rs  rating_form.rs  rating_stars.rs
frontend/src/pages/: ai_auto_tag.rs  assign_talks.rs  auth_callback.rs  bulk_email.rs  configuration.rs  export_talks.rs  home.rs  login.rs  manage_email_templates.rs  manage_schedule_slots.rs  manage_tracks.rs  mod.rs  my_talks.rs  not_found.rs  organizer_dashboard.rs  organizer_labels.rs  organizer_talks.rs  public_schedule.rs  ratings_dashboard.rs  schedule_builder.rs  signup.rs  speaker_dashboard.rs  submit_talk.rs
frontend/src/services/: auth.rs  bulk_email.rs  conferences.rs  dashboard.rs  email_templates.rs  labels.rs  mod.rs  ratings.rs  schedule_slots.rs  talks.rs  tracks.rs
migrations/: 20241224000001_create_users_and_auth.sql  20241224000002_create_talks_and_labels.sql  20241224000003_create_schedule.sql  20241224000004_create_email_templates.sql  20241230000002_add_linkedin_auth_provider.sql  20241230000003_seed_default_conference.sql  20250103000001_increase_session_token_length.sql  README.md
scripts/: README.md  backup.sh  call-for-papers-docker.service  call-for-papers.service  deploy.sh  envoy.yaml  install-binary.sh  install-deb.sh  nginx.conf  restore.sh  setup-ssl.sh  update.sh
src/: config.rs  lib.rs  main.rs
src/api/: middleware.rs  mod.rs
src/config/: mod.rs  models.rs
src/db/: mod.rs
src/handlers/: ai_tagging.rs  auth.rs  bulk_email.rs  conferences.rs  config.rs  dashboard.rs  email_templates.rs  export.rs  labels.rs  mod.rs  ratings.rs  schedule_slots.rs  talks.rs  tracks.rs
src/models/: auth.rs  conference.rs  email_template.rs  label.rs  mod.rs  rating.rs  schedule_slot.rs  talk.rs  track.rs  user.rs
src/services/: claude.rs  email.rs  mod.rs  openai.rs
tests/: auth_tests.rs  e2e_organizer_tests.rs  e2e_speaker_tests.rs  label_rating_tests.rs  schedule_tests.rs  talk_tests.rs
tests/common/: mod.rs
tests/e2e/: mod.rs
