[package]
name = "call-for-papers"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (PostgreSQL)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"
toml = "0.9"

# Authentication
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "10.2"
rand = "0.9"
oauth2 = "5.0"
reqwest = { version = "0.12", features = ["json"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
handlebars = "6.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
wiremock = "0.6"
