[package]
name = "call-for-papers"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (PostgreSQL)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"
toml = "0.9"

# Authentication
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
rand = "0.9"
oauth2 = { version = "5.0", features = ["reqwest"] }
reqwest = { version = "0.12", features = ["json"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
handlebars = "6.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
wiremock = "0.6"
http-body-util = "0.1"
tower = "0.5"
fantoccini = "0.22"
serde_json = "1.0"
bcrypt = "0.17"

[package.metadata.deb]
maintainer = "TXLF Contributors <noreply@texaslinuxfest.org>"
copyright = "2025, TXLF Contributors"
license-file = ["LICENSE", "4"]
extended-description = """\
An open source call for papers management system designed for open source \
conferences. Built with Rust and Yew.rs, this self-hostable solution provides \
a complete workflow from talk submission to conference scheduling."""
depends = "$auto, postgresql-client"
section = "web"
priority = "optional"
assets = [
    ["target/release/call-for-papers", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/call-for-papers/", "644"],
    ["config.example.toml", "etc/call-for-papers/", "644"],
    ["scripts/call-for-papers.service", "lib/systemd/system/", "644"],
]
conf-files = ["/etc/call-for-papers/config.example.toml"]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
