[package]
name = "call-for-papers-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Yew framework
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# HTTP client
gloo-net = "0.5"
gloo-storage = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }
gloo = "0.11"
base64 = "0.21"

# Logging
log = "0.4"
wasm-logger = "0.2"
